tests/fixtures/invalid/ord_2_args.py
# ord() takes at most 1 argument, got 2
x = ord(1, 1)
